# un-algebra

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile  README.md
doc/: reading.md  references.md
examples/: binary.rs  f4.rs
src/: lib.rs  logic.rs  prelude.rs  types.rs
src/com_group/: add_com_group.rs  add_com_group_test.rs  com_group.rs  mod.rs  mul_com_group.rs  mul_com_group_test.rs
src/com_ring/: com_ring.rs  com_ring_test.rs  mod.rs
src/complex/: cayley_dickson_process.rs  complex.rs  complex_test.rs  mod.rs
src/field/: field.rs  field_test.rs  mod.rs
src/group/: add_group.rs  add_group_test.rs  group.rs  mod.rs  mul_group.rs  mul_group_test.rs
src/magma/: add_magma.rs  add_magma_test.rs  magma.rs  mod.rs  mul_magma.rs  mul_magma_test.rs
src/monoid/: add_monoid.rs  add_monoid_test.rs  mod.rs  monoid.rs  mul_monoid.rs  mul_monoid_test.rs
src/numeric/: equal.rs  mod.rs  prelude.rs
src/rational/: mod.rs  rational.rs  rational_test.rs
src/ring/: mod.rs  ring.rs  ring_test.rs
src/semigroup/: add_semigroup.rs  add_semigroup_test.rs  mod.rs  mul_semigroup.rs  mul_semigroup_test.rs  semigroup.rs
src/tests/: config.rs  mod.rs  prelude.rs  random.rs
